Moved API docs route to allow it to be documented.
